css/main.css
/**** Mobile Styles ****/

/*** Global Styles ***/
html,
body {
  font-family: "Space Grotesk", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  background-color: #000000;
  margin: 0;
  scroll-behavior: smooth;
  width: 100%;
  height: 100vh;
  overflow-x: hidden;
  z-index: -2;
  position: absolute;
}

.content-wrapper {
  margin: 0;
  overflow: hidden;
  width: 100%;
}


/*** Header Styles ***/
.homepage-hero .content-wrapper {
  height: 100vh;
  margin: 0;
}


header h2 {
  font-family: "Space Grotesk", sans-serif;
  font-style: normal;
  font-optical-sizing: auto;
  font-weight: 600;
  clear: both;
  font-size: 9vw;
  margin: 0;
  color: white;
  width: 100%;
  display: flex;
  justify-content: center;
  padding: 35vh 0 0 0;
}

.typed-fade-out span {
  color: #4d88ff;
}

.blue {
  color: #4d88ff;
  transition: all 0.2s;
}


header h3 {
  font-family: "Space Grotesk", sans-serif;
  font-style: normal;
  font-optical-sizing: auto;
  font-weight: 500;
  font-size: 3.3vw;
  color: white;
  text-align: center;
  width: 90%;
  -webkit-animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1.3s both;
  animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1.3s both;
}

.h3-container {
  width: 100%;
  display: flex;
  justify-content: center;
}

.button-container {
  width: 100%;
  display: flex;
  justify-content: center;
  margin-top: 0.8rem;
}

.button-wrapper {
  border: 2px solid #4d88ff;
  border-radius: 4px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  -webkit-animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1.3s both;
  animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1.3s both;
  cursor: pointer;
  width: 35vw;
  height: 7vw;
}

@-webkit-keyframes slide-in-blurred-bottom {
  0% {
    -webkit-transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
    transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
    -webkit-transform-origin: 50% 100%;
    transform-origin: 50% 100%;
    -webkit-filter: blur(40px);
    filter: blur(40px);
    opacity: 0;
  }

  100% {
    -webkit-transform: translateY(0) scaleY(1) scaleX(1);
    transform: translateY(0) scaleY(1) scaleX(1);
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -webkit-filter: blur(0);
    filter: blur(0);
    opacity: 1;
  }
}

@keyframes slide-in-blurred-bottom {
  0% {
    -webkit-transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
    transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
    -webkit-transform-origin: 50% 100%;
    transform-origin: 50% 100%;
    -webkit-filter: blur(40px);
    filter: blur(40px);
    opacity: 0;
  }

  100% {
    -webkit-transform: translateY(0) scaleY(1) scaleX(1);
    transform: translateY(0) scaleY(1) scaleX(1);
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -webkit-filter: blur(0);
    filter: blur(0);
    opacity: 1;
  }
}


.button-wrapper a {
  margin: 0;
  color: #4d88ff;
  text-decoration: none;
  font-size: 3.2vw;
}

.social-icons {
  display: flex;
  align-items: center;
  justify-content: center;
  -webkit-animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1.4s both;
  animation: slide-in-blurred-bottom 1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1.4s both;
  height: 13vw;
  margin-left: 1vw;
  margin-top: 0.6rem;
}

.social-icons svg {
  width: 7.5vw;
}

.social-icons a {
  margin: 0 4vw;
  cursor: pointer;
}

.social-icons a img {
  width: 10vw;
}

@-webkit-keyframes slide-in-blurred-bottom {
  0% {
    -webkit-transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
    transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
    -webkit-transform-origin: 50% 100%;
    transform-origin: 50% 100%;
    -webkit-filter: blur(40px);
    filter: blur(40px);
    opacity: 0;
  }

  100% {
    -webkit-transform: translateY(0) scaleY(1) scaleX(1);
    transform: translateY(0) scaleY(1) scaleX(1);
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -webkit-filter: blur(0);
    filter: blur(0);
    opacity: 1;
  }
}

@keyframes slide-in-blurred-bottom {
  0% {
    -webkit-transform: translateY(500px) scaleY(2.5) scaleX(0.2);
    transform: translateY(500px) scaleY(2.5) scaleX(0.2);
    -webkit-transform-origin: 50% 100%;
    transform-origin: 50% 100%;
    -webkit-filter: blur(40px);
    filter: blur(40px);
    opacity: 0;
  }

  100% {
    -webkit-transform: translateY(0) scaleY(1) scaleX(1);
    transform: translateY(0) scaleY(1) scaleX(1);
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -webkit-filter: blur(0);
    filter: blur(0);
    opacity: 1;
  }
}

@keyframes shadow-drop-2-tl {
  0% {
    -webkit-transform: translateZ(0) translateX(0) translateY(0);
    transform: translateZ(0) translateX(0) translateY(0);
    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
  }

  100% {
    -webkit-transform: translateZ(50px) translateX(12px) translateY(12px);
    transform: translateZ(50px) translateX(12px) translateY(12px);
    -webkit-box-shadow: -12px -12px 20px -12px rgba(0, 0, 0, 0.35);
    box-shadow: -12px -12px 20px -12px rgba(0, 0, 0, 0.35);
  }
}

.input {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  align-content: center;
  border-radius: 4px;
  align-items: center;
  background-color: #1a1f24;
  width: 100%;
  position: sticky;
  padding: 0.9rem 0;
  z-index: 99;
  top: 0;
  bottom: -5vh;
  left: 0;
}

.value {
  background-color: transparent;
  border: none;
  padding: 4px 2px;
  color: white;
  display: flex;
  position: relative;
  gap: 5px;
  cursor: pointer;
  border-radius: 5px;
  transition: all .5s;
}

.value:not(:active):hover,
.value:focus {
  background-color: #2b323a;
  animation: shadow-drop-2-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
}
/* ... */

